// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardTable should render properly with grey background 1`] = `
.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: initial;
  text-transform: uppercase;
}

.c11 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c10 {
  padding: 0;
  padding: 1.5rem 2.4rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  overflow: hidden;
}

.c10 .c5 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c9 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 0.8rem;
  margin-bottom: 0.8rem;
  background-color: white;
  transition: box-shadow 100ms ease-out;
  border: 0.1rem solid #ffffff;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
}

.c9:hover {
  box-shadow: 0 0.4rem 0.8rem rgba(176, 188, 200, 0.6);
}

.c9 :nth-child(odd) {
  background: #ffffff;
}

.c9 :nth-child(even) {
  background: #ffffff;
}

.c0 {
  width: 100%;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  background-color: transparent;
}

.c8 {
  overflow: visible;
  font-size: 2rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c4 {
  padding: 1rem 1.6rem;
  display: flex;
  align-items: center;
}

.c2 {
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: flex;
  align-items: center;
  position: relative;
  justify-content: flex-start;
}

.c2::after {
  content: '';
  width: calc(100% - 1.6rem);
  margin: 0 0.8rem;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: transparent;
  height: 0.2rem;
  transition: all 100ms ease-out;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c2 .c3:hover {
  cursor: pointer;
}

.c2 .c3:hover .c5 {
  color: #5687D9;
}

.c2 .c3:hover .c7 * {
  fill: #5687D9;
}

.c2 .c5 {
  transition: all 100ms ease-out;
  user-select: none;
  display: inline;
  color: #435465;
}

.c2 .c7 {
  transition: all 100ms ease-out;
  width: 2.4rem;
  cursor: pointer;
  padding-left: 0.4rem;
}

.c2 .c7 * {
  fill: #435465;
}

<div>
  <table
    class="c0"
  >
    <thead>
      <tr
        class="c1"
        gridtemplatecolumns="1fr 1fr "
      >
        <th
          align="left"
          class="c2"
        >
          <span
            class="c3 c4"
          >
            <h5
              class="c5 c6"
              textalign="initial"
              textcolor="inherit"
              textvariant="h5"
            >
              Patient Info
            </h5>
            <svg
              class="c7 c8"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </span>
        </th>
        <th
          align="left"
          class="c2"
        >
          <span
            class="c3 c4"
          >
            <h5
              class="c5 c6"
              textalign="initial"
              textcolor="inherit"
              textvariant="h5"
            >
              RxInfo
            </h5>
            <svg
              class="c7 c8"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="c9"
        gridtemplatecolumns="1fr 1fr "
      >
        <td
          align="left"
          class="c10"
        >
          <span
            class="c5 c11"
            textalign="initial"
            textcolor="inherit"
            title="Oli Bob"
          >
            Oli Bob
          </span>
        </td>
        <td
          align="left"
          class="c10"
        >
          <span
            class="c5 c11"
            textalign="initial"
            textcolor="inherit"
            title="Metaformin"
          >
            Metaformin
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CardTable should render properly with white background 1`] = `
.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: initial;
  text-transform: uppercase;
}

.c11 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c10 {
  padding: 0;
  padding: 1.5rem 2.4rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  overflow: hidden;
}

.c10 .c5 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c9 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 0.8rem;
  margin-bottom: 0.8rem;
  background-color: white;
  transition: box-shadow 100ms ease-out;
  border: 0.1rem solid #dfe4e9;
  box-shadow: none;
}

.c9:hover {
  box-shadow: 0px 0.2rem 0.4rem rgba(176, 188, 200, 0.6);
}

.c9 :nth-child(odd) {
  background: #F7F8F9;
}

.c9 :nth-child(even) {
  background: #ffffff;
}

.c0 {
  width: 100%;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  background-color: transparent;
}

.c8 {
  overflow: visible;
  font-size: 2rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c4 {
  padding: 1rem 1.6rem;
  display: flex;
  align-items: center;
}

.c2 {
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: flex;
  align-items: center;
  position: relative;
  justify-content: flex-start;
}

.c2::after {
  content: '';
  width: calc(100% - 1.6rem);
  margin: 0 0.8rem;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: transparent;
  height: 0.2rem;
  transition: all 100ms ease-out;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c2 .c3:hover {
  cursor: pointer;
}

.c2 .c3:hover .c5 {
  color: #5687D9;
}

.c2 .c3:hover .c7 * {
  fill: #5687D9;
}

.c2 .c5 {
  transition: all 100ms ease-out;
  user-select: none;
  display: inline;
  color: #607890;
}

.c2 .c7 {
  transition: all 100ms ease-out;
  width: 2.4rem;
  cursor: pointer;
  padding-left: 0.4rem;
}

.c2 .c7 * {
  fill: #607890;
}

<div>
  <table
    class="c0"
  >
    <thead>
      <tr
        class="c1"
        gridtemplatecolumns="1fr 1fr "
      >
        <th
          align="left"
          class="c2"
        >
          <span
            class="c3 c4"
          >
            <h5
              class="c5 c6"
              textalign="initial"
              textcolor="inherit"
              textvariant="h5"
            >
              Patient Info
            </h5>
            <svg
              class="c7 c8"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </span>
        </th>
        <th
          align="left"
          class="c2"
        >
          <span
            class="c3 c4"
          >
            <h5
              class="c5 c6"
              textalign="initial"
              textcolor="inherit"
              textvariant="h5"
            >
              RxInfo
            </h5>
            <svg
              class="c7 c8"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="c9"
        gridtemplatecolumns="1fr 1fr "
      >
        <td
          align="left"
          class="c10"
        >
          <span
            class="c5 c11"
            textalign="initial"
            textcolor="inherit"
            title="Oli Bob"
          >
            Oli Bob
          </span>
        </td>
        <td
          align="left"
          class="c10"
        >
          <span
            class="c5 c11"
            textalign="initial"
            textcolor="inherit"
            title="Metaformin"
          >
            Metaformin
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
